--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <!-- Header -->
     <!-- Header -->
     <header :class="dailyChallenge ? 'bg-white/40 dark:bg-slate-900/40 backdrop-blur-md' : 'bg-white dark:bg-slate-900'"
-      class="flex-none p-4 pb-2 border-b border-indigo-50 dark:border-slate-800 z-30 transition-colors duration-300">
+      class="relative flex-none p-4 pb-2 border-b border-indigo-50 dark:border-slate-800 z-30 transition-colors duration-300">
       <div class="max-w-lg mx-auto flex items-center justify-between">
         <!-- Left: Logo & Branding -->
         <div class="flex items-center gap-2 cursor-pointer hover:opacity-80 transition-opacity"
@@ -253,7 +253,7 @@
                 class="w-6 h-6 opacity-60 hover:opacity-100 transition-opacity dark:invert contrast:invert"></button>
             <!-- Popover -->
             <div x-show="showVolumePopover" x-transition.origin.top.right.duration.200ms
-              class="absolute top-full right-0 mt-2 p-4 w-64 bg-white/10 dark:bg-slate-900/40 backdrop-blur-[14px] rounded-xl shadow-2xl border border-white/20 dark:border-slate-700/50 z-[100] flex flex-col gap-4">
+              class="absolute top-full right-0 mt-2 p-4 w-64 bg-white/85 dark:bg-slate-900/85 backdrop-blur-[14px] rounded-xl shadow-2xl border border-white/20 dark:border-slate-700/50 z-[100] flex flex-col gap-4">
               <!-- Slider Row -->
               <div class="flex items-center gap-4">
                 <!-- Mute/Unmute Button --><button @click="toggleMusic()"
